# yocto-101

./: 1.md  README.md  build-yocto-rpi-101.md  buildYoctoRpi101.md  configure-package-manager.md  esdk.md  yocto-investigation.md  yocto-with-azure.md  yoctoWithAzure.md
app_development/: Comparison_between_yoctoEsdk_and_dockcross.md
app_development/dockcross/: build_app_with_dockcross.md
app_development/dockcross/ACR/: Dockerfile  README.md  host_images_on_acr.md
app_development/dockcross/ACR/demo_example/: README.md
app_development/dockcross/ACR/try_azure/: Dockerfile  README.md
app_development/dockcross/ACR/try_hello/: Dockerfile
app_development/dockcross/ACR/try_pnp/: Dockerfile
app_development/dockcross/decouple_build/: README.md
app_development/dockcross/decouple_build/try_azure/: Dockerfile
app_development/dockcross/example/demo_example/: README.md
app_development/dockcross/example/demo_example/bme280_example/bme280/: CMakeLists.txt
app_development/dockcross/example/try_azure/: Dockerfile
app_development/dockcross/examples/dockcross_azure/: Dockerfile
app_development/dockcross/examples/dockcross_hello/: compile.sh
app_development/minimal_toolchain/: Best_practice_to_build_toolchain_base_image.md  Comparison.pptx
app_development/minimal_toolchain/try_docker/: Dockerfile
app_development/yocto_esdk/: build_app_with_yocto_esdk.md
dockcross/: build-app-with-dockcross.md  build_app_with_dockcross.md
test-report/: build-azure-sample-with-docker-container-leveraging-yocto-toolchain-test-report.md
(+48 files in other folders)
